--- a/kubernetes/persistentVolumes/pvc-nfs.yaml
+++ b/kubernetes/persistentVolumes/pvc-nfs.yaml
@@ -5,8 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteMany
-  volumeMode: Filesystem
-  storageClassName: slow
+  storageClassName: ""
   volumeName: fileserver
   resources:
     requests:
